出した手を絵文字に変更

--- a/zyanken.html
+++ b/zyanken.html
@@ -7,12 +7,18 @@
     <title>じゃんけん</title>
 </head>
 
+<style>
+    .hand {
+        font-size: 2.0em;
+    }
+</style>
+
 <body>
     <div class="container">
         <h1>出す手を選んでね</h1>
-        <button name="グー" class="hand">グー</button>
-        <button name="チョキ" class="hand">チョキ</button>
-        <button name="パー" class="hand">パー</button>
+        <button name="グー" class="hand">✊</button>
+        <button name="チョキ" class="hand">✌</button>
+        <button name="パー" class="hand">✋</button>
     </div>
     <div id="result-container">
         <h2>結果表示</h2>
